# franime_dl_gui

./: Cargo.toml  README.md
src/: animes_api.rs  downloader.rs  main.rs  url_fetcher.rs  worker.rs
